[package]
name = "mix"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
config = "~0.9"
corona = "~0.4"
env_logger = "~0.5"
failure = "~0.1"
flate2 = "~1"
log = "~0.4"
once_cell = "~0.1"
parking_lot = "~0.6"
rlua = "~0.15"
serde = "~1"
serde_derive = "~1"
structopt = "~0.2"
walkdir = "~2"
